fix spacing on search result cards in a list

--- a/src/app/card/search-result-card/search-result-card.component.scss
+++ b/src/app/card/search-result-card/search-result-card.component.scss
@@ -1,7 +1,7 @@
 @import "../card.component";
 
 .search-result-card {
-  margin-bottom: 1.15rem;
+  //margin-bottom: 1.15rem;
 }
 
 :host ::ng-deep em {
